# Accelerated-Turbin3-rust-solana

./: README.md  pnpm-lock.yaml
escrow-litesvm/: .gitignore
escrow-litesvm/programs/anchor-escrow/src/tests/: mod.rs
magicblock-er-example/programs/er-state-account/: Cargo.toml
magicblock-er-example/programs/er-state-account/src/: lib.rs
programs/whitelist-transfer-hook/src/: lib.rs
programs/whitelist-transfer-hook/src/instructions/: initialize_whitelist.rs  transfer_hook.rs
programs/whitelist-transfer-hook/src/state/: whitelist.rs
week-1-test/: readme.md
week-1-test/transfer_hook/: Anchor.toml
week-1-test/transfer_hook/programs/transfer_hook/: Cargo.toml
week-1-test/transfer_hook/programs/transfer_hook/src/: lib.rs
week-1-test/transfer_hook/programs/transfer_hook/src/instructions/: mod.rs  (+2 more)
week-1-test/transfer_hook/tests/: transfer_hook.ts
week-1-test/week1_challenge/: Anchor.toml  pnpm-lock.yaml
week-1-test/week1_challenge/programs/week1_challenge/: Cargo.toml
week-1-test/week1_challenge/programs/week1_challenge/src/: lib.rs
week-1-test/week1_challenge/programs/week1_challenge/src/instructions/: deposit_withdraw.rs  init_extra_accounts_meta.rs  mod.rs  whitelist_user.rs
week-1-test/week1_challenge/programs/week1_challenge/src/state/: whitelist.rs
week-1-test/week1_challenge/programs/week1_challenge/src/tests/: mod.rs
week-1-test/week1_challenge/tests/: week1_challenge.ts
whitelist-transfer-hook/: Anchor.toml  README.md
whitelist-transfer-hook/programs/whitelist-transfer-hook/src/: lib.rs
whitelist-transfer-hook/tests/: whitelist-transfer-hook.ts
whitelist-transfer-hook/tests/wallets/: user_1.json
(+6 files in other folders)
